# bounded_domains

./: .flake8  .gitignore  README.md  demo.ipynb  demo.py  pyproject.toml
.github/workflows/: ci.yml
bounded_domains/: __init__.py  domains.py  graph.py  structures.py  utils.py
docs/: conf.py  details.rst  index.rst  reference.rst
tests/: test_bounded_domains.py  test_domains.py  test_graph.py  test_utils.py
tests/resources/: 117x34_coords_2d.txt  117x34_elements_2d.txt  3x3_coords_2d.txt  3x3_elements_2d.txt
