[tool.poetry]
name = "bounded_domains"
version = "0.1.0"
description = "A module for querying triangulated bounded domains."
authors = ["Benjamin Hackl <devel@benjamin-hackl.at>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
