[tool.poetry]
name = "bounded_domains"
version = "0.1.0"
description = "A module for querying triangulated bounded domains."
authors = ["Benjamin Hackl <devel@benjamin-hackl.at>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
