[tool.poetry]
name = "bounded_domains"
version = "0.1.0"
description = "A module for querying triangulated bounded domains."
authors = ["Benjamin Hackl <devel@benjamin-hackl.at>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.6"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"
Sphinx = "^4"
pytest-cov = "^3.0.0"
furo = "^2022.6.21"

[tool.pytest.ini_options]
addopts = "--cov=bounded_domains --cov-report=term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
